--- a/index.html
+++ b/index.html
@@ -3,11 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <title>Barbearia Alura</title>
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <h1 class="titulo-principal">Barbearia Alura</h1>
+      <div class="cx-titulo">
+        <h1 class="titulo-principal">Barbearia Alura</h1>
+        <nav>
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <img id="banner" src="./assets/banner.jpg" />
     <div class="principal">
