--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Barbearia Alura</title>
-
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style-home.css" />
   </head>
   <body>
     <header>
-      <div class="cx-titulo">
-        <h1 class="titulo-principal">Barbearia Alura</h1>
+      <div class="caixa">
+        <h1><img src="./assets/logo.png" alt="Logo da Barbearia"/></h1>
+
         <nav>
-          <ul>
+          <ul >
             <li><a href="index.html">Home</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -56,5 +57,10 @@
 
       <img src="./assets/beneficios.jpg" class="imgbeneficios" />
     </div>
+
+    <footer>
+      <img src="./assets/logo-branco.png" alt="Logo da Barbearia">
+      <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+    </footer>
   </body>
 </html>
