--- a/produtos.html
+++ b/produtos.html
@@ -5,12 +5,12 @@
     <title>Produtos - Barbearia Alura</title>
 
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="produtos.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="caixa">
-        <h1><img src="./assets/logo.png" /></h1>
+        <h1><img src="./assets/logo.png" alt="Logo da Barbearia"/></h1>
 
         <nav>
           <ul >
@@ -46,7 +46,7 @@
     </main>
 
     <footer>
-      <img src="./assets/logo-branco.png">
+      <img src="./assets/logo-branco.png" alt="Logo da Barbearia">
       <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
     </footer>
   </body>
